name:                RoboGame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/RoboGame#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable RoboGame-exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:	      GridInterpreterS1.hs
  build-depends:       base
                     , vty
                     , process
                     , brick
                     , directory
                     , aeson
                     , parsec
                     , vector
                     , containers
                     , bytestring
                     , text
                     , wai
                     , mtl                   
                     , RoboGame
                     , network
                     , HTTP
                     , microlens
                     , microlens-th
                     , split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/RoboGame
